--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.1.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "lovable-tagger": "^1.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
