--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "vercel-build": "npm ci --legacy-peer-deps && npm run build"
+    "preview": "vite preview --host",
+    "vercel-build": "npm ci --legacy-peer-deps && npm run build",
+    "render-build": "npm ci --legacy-peer-deps && npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -37,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/supabase-js": "^2.38.4",
+    "express": "^4.18.2",
     "@tanstack/react-query": "^5.8.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
