--- a/backend/env.example
+++ b/backend/env.example
@@ -15,9 +15,9 @@ ADMIN_PASSWORD=admin123456
 # Frontend URL
 FRONTEND_URL=http://localhost:8081
 
-# Razorpay Configuration (if using)
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+# Razorpay Configuration
+RAZORPAY_KEY_ID=rzp_live_RD4Ia7eTGct90w
+RAZORPAY_KEY_SECRET=B18FWmc6yNaaVSQkPDULsJ2U
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
