feat: Complete Cloudinary migration - Replace Google Drive images with Cloudinary CDN
- Migrated all 59 product images from Google Drive to Cloudinary
- Updated frontend to use Cloudinary URLs for better performance
- Updated backend productsStore with Cloudinary URLs
- Added Cloudinary configuration and upload routes
- Updated admin upload components to use Cloudinary
- Removed Google Drive dependencies and CORS issues
- Added migration scripts and documentation
- Improved image loading speed and reliability

--- a/backend/env.example
+++ b/backend/env.example
@@ -22,3 +22,8 @@ RAZORPAY_KEY_SECRET=B18FWmc6yNaaVSQkPDULsJ2U
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=public/uploads
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
