--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "razorpay": "^2.9.2",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
