--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=5000
 
 # MongoDB Atlas Connection (Production)
-MONGODB_URI=mongodb+srv://figureitout:GpdhG4lg6nKUp4cp@your-cluster.mongodb.net/figureitout-store?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://figureitout:figureitoutadmin@fio.tf4vspr.mongodb.net/figureitout-store?retryWrites=true&w=majority&appName=fio
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here-change-this-in-production
@@ -13,7 +13,7 @@ ADMIN_EMAIL=admin@figureitout.in
 ADMIN_PASSWORD=admin123456
 
 # Frontend URL
-FRONTEND_URL=http://localhost:8081
+FRONTEND_URL=https://www.figureitoutstore.in
 
 # Razorpay Configuration
 RAZORPAY_KEY_ID=rzp_live_RD4Ia7eTGct90w
@@ -24,6 +24,6 @@ MAX_FILE_SIZE=5242880
 UPLOAD_PATH=public/uploads
 
 # Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_CLOUD_NAME=dpeun5lss
+CLOUDINARY_API_KEY=857648438576998
+CLOUDINARY_API_SECRET=jx970PKPrcQMZ8G24HPjMEKiMq4
